--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "grunt-ftpress",
-	"description": "Grunt enhanced file transfer protocol",
-	"version": "1.0.0-beta.4",
+	"description": "Grunt enhanced file transfer with speed in mind",
+	"version": "1.0.0-beta.5",
 	"license": "GPL-3.0",
 	"keywords":
 	[
