--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "grunt-ftpress",
 	"description": "Grunt enhanced file transfer with speed in mind",
-	"version": "1.0.2",
+	"version": "1.0.3",
 	"license": "GPL-3.0",
 	"keywords":
 	[
@@ -34,6 +34,7 @@
 	{
 		"chai": "4.1.2",
 		"eslint": "4.19.1",
+		"eslint-config-redaxmedia": "https://github.com/redaxmedia/eslint-config-redaxmedia.git",
 		"grunt": "1.0.2",
 		"mocha": "5.1.1"
 	},
