--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "grunt-ftpress",
 	"description": "Grunt enhanced file transfer with speed in mind",
-	"version": "1.5.0-beta.1",
+	"version": "1.5.0",
 	"license": "GPL-3.0",
 	"keywords":
 	[
