--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "grunt-ftpress",
 	"description": "Grunt enhanced file transfer with speed in mind",
-	"version": "1.5.0",
-	"license": "GPL-3.0",
+	"version": "1.5.1",
+	"license": "MIT",
 	"keywords":
 	[
 		"ftp",
@@ -33,15 +33,15 @@
 	"devDependencies":
 	{
 		"chai": "4.2.0",
-		"eslint": "6.8.0",
-		"eslint-config-redaxmedia": "2.0.0",
-		"grunt": "1.1.0",
-		"mocha": "7.1.1"
+		"eslint": "7.13.0",
+		"eslint-config-redaxmedia": "2.2.0",
+		"grunt": "1.3.0",
+		"mocha": "8.2.1"
 	},
 	"scripts":
 	{
 		"lint": "eslint tasks tests",
 		"fix": "eslint tasks tests --fix",
-		"test": "mocha tests/*Test.js"
+		"test": "mocha"
 	}
 }
