--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "grunt-ftpress",
 	"description": "Grunt enhanced file transfer with speed in mind",
-	"version": "1.5.1",
+	"version": "1.6.0-beta.1",
 	"license": "MIT",
 	"keywords":
 	[
