--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,4 +25,5 @@ jobs:
      node-version: 15
   - run: sudo apt-get install lftp
   - run: npm install
+  - run: grunt ftpress:errorPermissionDenied
   - run: npm run test
