--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "grunt-ftpress",
 	"description": "Grunt enhanced file transfer with speed in mind",
-	"version": "2.0.0-beta.3",
+	"version": "2.0.0",
 	"license": "MIT",
 	"keywords":
 	[
@@ -32,7 +32,7 @@
 	},
 	"devDependencies":
 	{
-		"eslint": "7.14.0",
+		"eslint": "7.16.0",
 		"eslint-config-redaxmedia": "2.2.2",
 		"grunt": "1.3.0",
 		"mocha": "8.2.1"
